# rust-fullstack-practice

./: rustfmt.toml
backend/: .env  Cargo.toml  build.rs
backend/src/: handler.rs  main.rs
backend/src/db/: mod.rs  owner.rs  pet.rs
backend/src/db/migrations/: 20220903143214_init_db.sql
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs
