[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
warp = "*"
sqlx = {version = "*", features = ["runtime-tokio-rustls", "postgres", "migrate"]}
serde = {version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
dotenvy = "*"
tap = "*"
common = { version = "0.1.0", path = "../common" }

[build-dependencies]
tokio = {version = "*", features = ["full"]}
sqlx = {version = "*", features = ["runtime-tokio-rustls", "postgres", "migrate"]}
anyhow = "*"
dotenvy = "*"
