[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "*"
yew-router = "*"
serde_json = "*"
serde = {version = "*", features = ["derive"] }
anyhow = "*"
common = { version = "0.1.0", path = "../common" }